# zantetsu

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ZANTETSU_LLM_GUIDE.md  check_model.py  convert_safetensors.py  inspect_keys.py  pyproject.toml
bindings/node/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
bindings/node/src/: agents.test.ts  index.test.ts  index.ts  types.d.ts
bindings/python/: Cargo.toml  PUBLISH.md  README.md  build.sh  pyproject.toml
bindings/python/python/zantetsu/: __init__.py
bindings/python/src/: lib.rs
crates/zantetsu/: Cargo.toml  README.md
crates/zantetsu-core/: Cargo.toml  README.md
crates/zantetsu-core/benches/: parser_bench.rs
crates/zantetsu-core/src/: error.rs  lib.rs
crates/zantetsu-core/src/crf/: char_cnn.rs  model.rs
crates/zantetsu-core/src/parser/: bio_tags.rs  heuristic.rs  mod.rs  neural.rs  tokenizer.rs  unified.rs  viterbi.rs
crates/zantetsu-core/src/scoring/: context.rs  mod.rs  profile.rs
crates/zantetsu-core/src/types/: episode.rs  mod.rs  quality.rs  result.rs
crates/zantetsu-ffi/: Cargo.toml  README.md
crates/zantetsu-ffi/src/: lib.rs  node.rs  python.rs
crates/zantetsu-trainer/: Cargo.toml  README.md
crates/zantetsu-trainer/src/: data.rs  lib.rs  model.rs  trainer.rs
crates/zantetsu-vecdb/: Cargo.toml  README.md
crates/zantetsu-vecdb/src/: error.rs  lib.rs  matcher.rs
crates/zantetsu/src/: lib.rs
data/regression/: tricky_filenames.jsonl
python/zantetsu_tools/: __init__.py
python/zantetsu_tools/benchmark/: __init__.py  compare.py
python/zantetsu_tools/common/: __init__.py  anime_db.py  jsonl.py  paths.py  safetensors_tools.py  torch_runtime.py
python/zantetsu_tools/data/: __init__.py  generate_hybrid_dataset.py  generate_rad_dataset.py  hybrid_tokenizer.py
python/zantetsu_tools/model/: __init__.py  check_ner_model.py  convert_safetensors.py  list_safetensor_keys.py
python/zantetsu_tools/training/: char_cnn.py  hybrid_bilstm_crf.py
python/zantetsu_tools/validate/: __init__.py  anime_db.py
tools/: __init__.py  _dispatch.py  benchmark_compare.py  fetch_nyaa_titles.py  generate_50k_training.py  generate_rad_data.py  generate_training_data.py  groq_match.py  kitsu_sync.sh  train_char_cnn.py  validate_gemini_output.py  validate_with_anidb.py  visualize_predictions.py
tools/benchmark/: compare.py
tools/benchmark-compare/: Cargo.toml
tools/benchmark-compare/src/: main.rs
tools/benchmark_compare/: Cargo.toml
tools/data/: generate_hybrid_dataset.py  generate_rad_dataset.py
tools/kitsu-sync/: README.md
tools/kitsu-sync/src/: main.rs
tools/kitsu_sync/: Cargo.toml  README.md
tools/kitsu_sync/src/: main.rs
tools/model/: check_ner_model.py  convert_safetensors.py  list_safetensor_keys.py
tools/train/: char_cnn.py  hybrid_bilstm_crf.py
tools/train_ner/: train.py
tools/validate/: anime_db.py
