[workspace]
resolver = "2"
members = [
    "crates/zantetsu-core",
    "crates/zantetsu-vecdb",
    "crates/zantetsu-trainer",
    "crates/zantetsu-ffi",
    "tools/kitsu-sync",
    "tools/benchmark-compare",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["kokoro"]
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# ML Inference
candle-core = "0.8"
candle-nn = "0.8"
safetensors = "0.4"
candle-transformers = "0.8"
tokenizers = "0.19"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# CLI
clap = { version = "4", features = ["derive"] }

# Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
zantetsu-core = { path = "crates/zantetsu-core" }
zantetsu-vecdb = { path = "crates/zantetsu-vecdb" }
zantetsu-trainer = { path = "crates/zantetsu-trainer" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
