[project]
name = "zantetsu"
version = "0.1.0"
description = "Ultra-fast, intelligent library for anime metadata extraction and normalization"
dependencies = [
    "torch",
    "datasets",
    "transformers",
    "safetensors",
    "tokenizers",
    "accelerate",
    "openai",
    "parsett>=1.8.5",
    "rank-torrent-name>=1.11.0",
]
requires-python = ">=3.11"

[tool.uv]
managed = true
