[project]
name = "zantetsu-devtools"
version = "0.1.0"
description = "Development tooling for Zantetsu training, benchmarking, validation, and model maintenance"
dependencies = [
    "torch",
    "numpy",
    "safetensors",
    "parsett>=1.8.5",
    "rank-torrent-name>=1.11.0",
]
requires-python = ">=3.11"

[tool.uv]
managed = true
package = false
