[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zantetsu"
version = "0.1.2"
description = "Fast anime metadata parser - extracts title, episode, resolution, codecs from filenames"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "kokoro" }
]
keywords = ["anime", "parser", "metadata", "torrent", "filename"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/enrell/zantetsu"
Repository = "https://github.com/enrell/zantetsu"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
python-source = "python"
module-name = "zantetsu._zantetsu"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"