[package]
name = "zantetsu-core"
description = "ML-based anime metadata extraction and normalization engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"
repository.workspace = true
homepage = "https://github.com/enrell/zantetsu"
documentation = "https://docs.rs/zantetsu-core"
keywords = ["anime", "parser", "metadata", "torrent", "core"]
categories = ["parser-implementations", "multimedia"]

[dependencies]
# ML inference (Phase 2)
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
safetensors = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Regex (heuristic parser)
regex = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "parser_bench"
harness = false
