[package]
name = "zantetsu-ffi"
description = "Multi-language FFI bindings for Zantetsu (Node, Python, C)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"
repository.workspace = true
homepage = "https://github.com/enrell/zantetsu"
documentation = "https://docs.rs/zantetsu-ffi"
keywords = ["anime", "ffi", "node", "python", "bindings"]
categories = ["api-bindings", "multimedia"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zantetsu-core = { workspace = true }
zantetsu-vecdb = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# FFI bindings (Phase 4 — uncomment as needed)
# napi = { version = "2", features = ["napi9"] }
# napi-derive = "2"
napi = { version = "2", features = ["napi9"], optional = true }
napi-derive = { version = "2", optional = true }
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }

[features]
default = []
node = ["napi", "napi-derive"]
python = ["pyo3"]

[dev-dependencies]
