[package]
name = "zantetsu-trainer"
description = "Background sync and RLAIF training loop for Zantetsu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"
repository.workspace = true
homepage = "https://github.com/enrell/zantetsu"
documentation = "https://docs.rs/zantetsu-trainer"
keywords = ["anime", "training", "ml", "parser", "dataset"]
categories = ["science", "multimedia"]

[dependencies]
zantetsu-core = { workspace = true }
zantetsu-vecdb = { workspace = true }

# ML
candle-core = { workspace = true }
candle-nn = { workspace = true }
oorandom = "11"

# Async
tokio = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Storage
rusqlite = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# CLI
clap = { workspace = true }

[dev-dependencies]

[[bin]]
name = "train"
path = "src/bin/train.rs"
