[package]
name = "zantetsu-vecdb"
description = "Canonical anime title matching via Kitsu dumps or remote endpoints"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"
repository.workspace = true
homepage = "https://github.com/enrell/zantetsu"
documentation = "https://docs.rs/zantetsu-vecdb"
keywords = ["anime", "matching", "graphql", "kitsu", "metadata"]
categories = ["text-processing", "multimedia"]

[dependencies]
dirs = "5.0.1"
flate2 = "1.0"
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = "0.11.1"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
